Added playlist to stream radio

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ ICECAST_RELAY_PASSWORD=admin123
 ICECAST_ADMIN_PASSWORD=admin123
 ICECAST_MAX_SOURCES=3
 
-STREAM_NAME=radio
-STREAM_DESC=radio
-STREAM_URL=example.com/radio
+STREAM_NAME=Station Pro
+STREAM_DESC=www.stationpro.co
+STREAM_URL=stationpro.co/radio
 STREAM_MOUNTPOINT=radio
