--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,29 +5,32 @@ services:
     container_name: "radio_icecast"
     ports:
       - "${ICECAST_PORT:-8000}:8000"
+    volumes:
+      - "./config/icecast.xml:/etc/icecast.xml"
     environment:
       - ICECAST_SOURCE_PASSWORD=admin123
       - ICECAST_ADMIN_PASSWORD=admin123
       - ICECAST_RELAY_PASSWORD=admin=123
       - ICECAST_MAX_SOURCES
-      - ICECAST_ADMIN_EMAIL=icecast@icecast.com
+      - ICECAST_ADMIN_EMAIL=testing@testing.com
+      - ICECAST_LOCATION=USA
       - ICECAST_HOSTNAME=icecast
     restart: unless-stopped
-  mpd:
-    image: vimagick/mpd
-    container_name: "radio_mpd"
-    depends_on: [icecast]
-    command: >
-        sh -c "sed 's/ICECAST_SOURCE_PASSWORD/${ICECAST_SOURCE_PASSWORD:-hackme}/g' /etc/mpd.conf.template > /etc/mpd.conf
-        && mpd --stdout --no-daemon"
-    ports:
-      - "6601:6600"
-    volumes:
-      - "./mpd.conf.template:/etc/mpd.conf.template:ro"
-      - "${MPD_DB}:/var/lib/mpd/database:ro"
-      - "${MUSIC_DIR}:/var/lib/mpd/music:ro"
-      - "${PLAYLISTS_DIR}:/var/lib/mpd/playlists:ro"
-    restart: unless-stopped
+  # mpd:
+  #   image: vimagick/mpd
+  #   container_name: "radio_mpd"
+  #   depends_on: [icecast]
+  #   command: >
+  #       sh -c "sed 's/ICECAST_SOURCE_PASSWORD/${ICECAST_SOURCE_PASSWORD:-hackme}/g' /etc/mpd.conf.template > /etc/mpd.conf
+  #       && mpd --stdout --no-daemon"
+  #   ports:
+  #     - "6601:6600"
+  #   volumes:
+  #     - "./mpd.conf.template:/etc/mpd.conf.template:ro"
+  #     - "${MPD_DB}:/var/lib/mpd/database:ro"
+  #     - "${MUSIC_DIR}:/var/lib/mpd/music:ro"
+  #     - "${PLAYLISTS_DIR}:/var/lib/mpd/playlists:ro"
+  #   restart: unless-stopped
   liquidsoap:
     image: "savonet/liquidsoap:v2.0.2"
     container_name: "radio_liquidsoap"
@@ -39,7 +42,7 @@ services:
     environment:
       - ICECAST_SOURCE_PASSWORD=admin123
       - STREAM_NAME=Station
-      - STREAM_DESC=Station is rock!
-      - STREAM_URL
+      - STREAM_DESC=New Station Pro web Radio!
+      - STREAM_URL=radio.stationpro.co
       - STREAM_MOUNTPOINT=autodj
     restart: unless-stopped
